Templates: Fixed #15: List button float problem on Firefox.

--- a/suit/static/suit/less/ui/list.less
+++ b/suit/static/suit/less/ui/list.less
@@ -37,3 +37,7 @@
 #toolbar form {
     margin-bottom: 5px;
 }
+
+.toolbar-content {
+    overflow: hidden;
+}
